<resources>
    <string name="app_name" translatable="false">LauncherUI_C4</string><!-- app 名称 -->
    <string name="ui_key" translatable="false">LauncherUI_C4</string>
    <string name="ui_clazz" translatable="false">com.launcher.zy_ui04.MainActivityUI4</string>

    <string name="music_artist">Artist</string>
    <string name="navigation">Navigation</string>
    <string name="Apps">Apps</string>
    <string name="radio">Radio</string>
    <string name="video">Video</string>
    <string name="phone">Phone</string>
    <string name="music">Music</string>
    <string name="unknown_song">Unknown Song</string>
    <string name="settings">Settings</string>
    <string name="mode_switching">Mode Switching</string>
    <string name="file_manager">File Manager</string>
    <string name="gallery">Gallery</string>
    <string name="bluetooth_music">Bluetooth Music</string>
    <string name="bluetooth_phone">Bluetooth Phone</string>
    <string name="audio_input">Audio Input</string>
    <string name="video_input">Video Input</string>
    <string name="chrome" translatable="false">Chrome</string>
    <string name="easy_connect" >Easy Connect</string>
    <string name="zlink" translatable="false" >ZLINK</string>
    <string name="eq">EQ</string>

    <string-array name="wallpapers" translatable="false">
        <item>wallpaper_00</item>
        <item>wallpaper_01</item>
        <item>wallpaper_02</item>
        <item>wallpaper_03</item>
    </string-array>

</resources>