<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical">


    <ImageView
        android:id="@+id/iv_audio_input_big"
        android:layout_width="@dimen/widget_title_icon_width"
        android:layout_height="@dimen/widget_title_icon_height"
        android:onClick="onClick"
        android:scaleType="fitXY"
        android:src="@drawable/eq_big"
        app:layout_constraintBottom_toTopOf="@+id/tv_audio_input_big"
        app:layout_constraintEnd_toEndOf="@+id/tv_audio_input_big"
        app:layout_constraintStart_toStartOf="@+id/tv_audio_input_big"
        app:layout_constraintTop_toTopOf="@+id/separator_line1" />


    <TextView
        android:id="@+id/tv_audio_input_big"
        style="@style/widget_title_tv_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/eq"
        app:layout_constraintBottom_toBottomOf="@+id/separator_line1"
        app:layout_constraintEnd_toStartOf="@+id/separator_line1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_audio_input_big"
        app:layout_constraintWidth_percent="0.28" />
    <!--line-->
    <ImageView
        android:id="@+id/separator_line1"
        android:layout_width="@dimen/separator_line_width"
        android:layout_height="@dimen/separator_line_height"
        android:src="@drawable/separator_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <ImageView
        android:id="@+id/iv_chrome_big"
        android:layout_width="@dimen/widget_title_icon_width"
        android:layout_height="@dimen/widget_title_icon_height"
        android:onClick="onClick"
        android:scaleType="fitXY"
        android:src="@drawable/chrome_big"
        app:layout_constraintBottom_toTopOf="@+id/tv_chrome_big"
        app:layout_constraintEnd_toEndOf="@+id/tv_chrome_big"
        app:layout_constraintStart_toStartOf="@+id/tv_chrome_big"
        app:layout_constraintTop_toTopOf="@+id/separator_line1" />


    <TextView
        android:id="@+id/tv_chrome_big"
        style="@style/widget_title_tv_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/chrome"
        app:layout_constraintBottom_toBottomOf="@+id/separator_line1"
        app:layout_constraintEnd_toStartOf="@+id/separator_line2"
        app:layout_constraintStart_toEndOf="@+id/separator_line1"
        app:layout_constraintTop_toBottomOf="@+id/iv_chrome_big"
        app:layout_constraintWidth_percent="0.28" />

    <ImageView
        android:id="@+id/separator_line2"
        android:layout_width="@dimen/separator_line_width"
        android:layout_height="@dimen/separator_line_height"
        android:src="@drawable/separator_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/iv_setting_big"
        android:layout_width="@dimen/widget_title_icon_width"
        android:layout_height="@dimen/widget_title_icon_height"
        android:onClick="onClick"
        android:scaleType="fitXY"
        android:src="@drawable/setting_big"
        app:layout_constraintBottom_toTopOf="@+id/tv_setting_big"
        app:layout_constraintEnd_toEndOf="@+id/tv_setting_big"
        app:layout_constraintStart_toStartOf="@+id/tv_setting_big"
        app:layout_constraintTop_toTopOf="@+id/separator_line2" />


    <TextView
        android:id="@+id/tv_setting_big"
        style="@style/widget_title_tv_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="@+id/separator_line2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/separator_line2"
        app:layout_constraintTop_toBottomOf="@+id/iv_setting_big"
        app:layout_constraintWidth_percent="0.28" />


</androidx.constraintlayout.widget.ConstraintLayout>